@@ -11,6 +11,8 @@ Version 4.0  [ currently under development ]
     ENGINE:
         Class NNormalSurface:
             - Using NProperty to store calculable properties.
+        Class NTriBool:
+            - Added for representing three-way booleans.
 
 Version 3.97  [ 24 November, 2003 ] - Final prerelease for version 4.0.
     OVERALL:
